--- a/talk-beta/src/App.css
+++ b/talk-beta/src/App.css
@@ -1,14 +1,15 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
   text-align: center;
 }
 
 .logo {
   height: 6em;
   padding: 1.5em;
-  will-change: filter;
+  /* will-change: filter; */
   transition: filter 300ms;
 }
 .logo:hover {
