--- a/talk-beta/src/index.css
+++ b/talk-beta/src/index.css
@@ -51,14 +51,14 @@
 }
 
 
-a {
+/* a {
   font-weight: 400;
   color: #171A1FFF;
   text-decoration: inherit;
 }
 a:hover {
   color: #535bf2;
-}
+} */
 
 body {
   margin: 0;
