--- a/talk-beta/src/App.css
+++ b/talk-beta/src/App.css
@@ -1,9 +1,18 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding-left: 2rem;
   padding-right: 2rem;
   text-align: center;
+} */
+ #root {
+  margin: 0 auto;
+  min-height: 100vh;
+  display: flex;
+  place-items: center;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
 }
 
 .logo {
