--- a/talk-beta/src/index.css
+++ b/talk-beta/src/index.css
@@ -59,13 +59,22 @@ a:hover {
   color: #535bf2;
 } */
 
-body {
+/* body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-}
+} */
+
+/* body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+} */
+
 
 button:focus,
 button:focus-visible {
@@ -80,9 +89,7 @@ button:focus-visible {
   a:hover {
     color: #747bff;
   }
-  button {
-    /* background-color: #f9f9f9; */
-  }
+ 
 }
 
 @theme inline {
